Devops_learnings/Containers/K8/YAML/prom-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
spec:
  selector:
    env: metrics
  type: NodePort
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30000
